// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el componente GifExpertApp. debe de hacer match con el snapshot. 1`] = `
<Fragment>
  <h2>
    Gif expert app
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`Pruebas en el componente GifExpertApp. debe de mostrar una lista de categorías. 1`] = `
<Fragment>
  <h2>
    Gif expert app
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="The mandalorian"
      key="The mandalorian"
    />
    <GifGrid
      category="Back to the future"
      key="Back to the future"
    />
  </ol>
</Fragment>
`;
